@@ -38,6 +38,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- Sort by alias in valias_select_all (needed for QmailAdmin).
 	- Add new valias_remove() command to remove a single line from
 	  valias table.
+	- Fix incorrect buffer use in PQexec() calls.
 
 	Bill Shupp
 	- Add -o option to vmoduser to set V_OVERRIDE flag. [875505]
